# morethansentiments

./: .gitignore  Boilerplate.ipynb  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
src/: MoreThanSentiments.py  morethansentiments.py
src/MoreThanSentiments.egg-info/: PKG-INFO  top_level.txt
src/morethansentiments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_code.py
tests/: test_code.py
