[build-system]
requires = ["setuptools>=42.0", "wheel", "tqdm >= 4.59.0", "spacy >= 3.3.0", "pandas ~= 1.2.4", "nltk >= 3.6.1"]
build-backend = "setuptools.build_meta"


[tool.mypy]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
